navbar.css
/*====Fonts====*/

@font-face {
    font-family: 'DIN Alternate Bold';
    font-style: normal;
    font-weight: normal;
    src: local('DIN Alternate Bold'), url('fonts/DINAlternate-Bold.ttf') format('truetype');
}

@font-face {
    font-family: 'Avenir Next';
    font-style: normal;
    font-weight: normal;
    src: local('Avenir Next'), url('fonts/AvenirNextLTPro-Regular.otf') format('opentype');
}

/*====Base Styles====*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /*cursor: none;*/
    font-family: 'avenir next';
}

body {
    background-color: #f5f5f5;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

img {
    width: 100%;
}

/*====Highlight & Cursor====*/
::-moz-selection {
    background: #FFCE22;
}

::selection {
    background: #FFCE22;
}

/* .cursor {
    position: fixed;
    width: 30px;
    height: 30px;
    margin-left: -20px;
    margin-top: -20px;
    border-radius: 50%;
    border: 2px solid black;
    background-color: #F5F5F5;
    pointer-events: none;
    z-index: 1000;
    display: flex;
    align-items: center;
    justify-content: center;
}

.cursor .cursor-dot {
    height: 5px;
    width: 5px;
    border-radius: 50%;
    background-color: black;

} */

/*====Date and Time====*/
.date-item {

    background-color: white;
    padding: 1rem 2rem;
    margin-bottom: 1rem;
    border-radius: 10.5px;
    font-family: 'Avenir Next';
    font-size: 1rem;
}

.date-item-top .date-txt {
    display: flex;
    align-items: center;
}

.date-item-top .date-txt i {
    margin-right: 0.6rem;
}

.date-item-bottom {
    height: auto;
    background-color: white;
    border-radius: 10.5px;

}

.date-item-bottom .date-time {
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: row;
    margin-top: 0.6rem;
}

.date-item-bottom .date-time .time {
    font-size: 1rem;
    color: #353535;
    margin-right: 0.8rem;
}

.date-item-bottom .date-time .date {
    font-size: 1rem;
    color: #353535;
    text-align: center;

}


/*====Loading Screen====*/
.loading-screen {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    z-index: 1000;
    transition: opacity 0.3s ease, visibility 0.3s ease;
}

.loading-screen h2 {
    color: #F5F5F5;
}

.loading-screen .loader {
    position: relative;
    height: 2px;
    width: 22%;
    margin-top: 1.4rem;
    background-color: gray;
}


.loading-screen .loader .loader-line {
    position: absolute;
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background-color:  #D2D7DC;
    animation: loader-animation 3s 0.6s forwards;
}

@keyframes loader-animation {
    0% {
        width: 0;
        left: 50%;
    }
    50% {
        width: 100%;
        left: 0;
    }
    100% {
        width: 100%;
        left: 0;
    }
}

.loader-screen-hidden {
    opacity: 0;
    visibility: hidden;
}


/*====Top Nav Bar=====*/
.top-navbar {
    width: 100%;
    background-color: #E5C66D;
    height: 3rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.top-navbar .top-navbar-left #logo-container {
   
   padding: 0.4rem;
    display: flex;
    align-items: center;
}

#logo-container img {
    height: 2.3rem;
    width: auto;
    border-radius: 8px;
}



.user-profile {
    background-color: #f5f5f5;
    border-radius: 8px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-left: 0.5rem;
    margin-right: 6px;
}

.user-profile .user-profile-left {
    display: flex;
    align-items: center;
    justify-content: center;
    color: #8E8E91;
}

.user-profile .user-profile-left i {
    font-size: 18px;
    background-color: black;
    border-radius: 50%;
    color: white;
    padding: 0.4rem;
    display: none;
}

.user-profile .user-profile-left p {
    margin-right: 10px;
    margin-left: 8px;
}

.user-profile .user-profile-left span {
    color: black;
}

.user-profile-right .user-profile-logout {
    color: white;
    background-color: black;
    padding: 0.3rem 0.8rem;
    font-size: 16px;
    text-align: center;
    border-radius: 8px;
}




/*====Nav Bar====*/
.nav-content {
    display: flex;
}

nav {
    width: 16%;
    background-color: #F5F5F5;
    padding-left: 1.2rem;
    padding-top: 4rem;
    height: 94dvh;

}

.menu {
    z-index: 999;
}

.menu .intro-txt {
    margin-bottom: 3rem;
}

.menu .intro-txt h1 {
    font-family: 'DIN Alternate Bold';
    font-size: 1.5rem;
}

.menu .intro-txt p {
    font-family: 'Avenir Next';
    font-size: 1rem;
}


.menu .nav-item {
    position: relative;
    cursor: pointer;
    overflow: hidden;
    z-index: 2;
    background-color: white;
    padding: 1rem 2rem;
    margin-bottom: 1rem;
    border-radius: 10.5px;
    font-family: 'Avenir Next';
    font-size: 1rem;
    transition: background-color 0.2s ease-in-out;
    
}

.menu .nav-item .btn-animate {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    color: white;
    z-index: -1;
    transform: translateY(100%);
    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
}


.menu .nav-item:hover .btn-animate {
    transform: translateY(0);
}


/*For current project button*/
.menu .nav-item#current-project {
    margin-left: 10%;
    font-size: 0.9rem;
    padding: 0.6rem 1.2rem;
}


.menu .nav-item#current-project:hover .btn-animate{
    transform: translateY(100%);
}

.menu .nav-item#current-project.active {
    background-color: gray; /*if active*/
    margin-left: 10%;
    font-size: 0.9rem;
    padding: 0.6rem 1.2rem;
}

.menu .nav-item#current-project:hover span, nav .nav-item#current-project:hover i{
    color: white; /*if not active, on hover, change colour to gray*/
}


.menu .nav-item#current-project.active:hover span, nav .nav-item#current-project.active:hover i{
    color: white; /*if active, on hover, change colour to white*/
}

.menu .nav-item#current-project:hover .btn-animate{
    background-color: gray;
    transform: translateY(0);
}

.menu .nav-item#current-project .btn-animate,/*change bg-colour animation to gray*/
.menu .nav-item#current-project.active .btn-animate, /*If active, change bg-colour animation to gray*/
.menu .nav-item#current-project.active:hover .btn-animate {  /*if active, on hover, change bg-colour animation to gray*/
    background-color: gray; 
}


/*Normal nav item styling*/
.menu .nav-item a {
    color: rgb(123, 120, 120);
    transition: color 0.2s ease-in-out;
    display: flex;
    align-items: center;
}

.menu .nav-item:hover span, nav ul li:hover i{
    color: white;
}

.menu .nav-item a i {
    padding-right: 0.6rem;
}

.menu .nav-item.active {
    background-color: black;
    border-radius: 10.5px;
}

.menu .nav-item.active a {
    color: white;
}

.bar {
    height: 0.2rem;
    margin-right: 1.5rem;
    background-color: #F5F5F5;
    margin-top: 3rem;
}


/*====Hamburger Menu====*/
.hamburger {
    cursor: pointer;
    background: none;
    z-index: 10000000;
    transition: all 0.25s;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    margin-bottom: 1.2rem;
    border: 1px solid white;
    background-color: black;
    border-radius: 10px;
    padding: 1.2rem;
    position: relative;
    top: -2rem;
    left: 100%;
    height: 24px;
    width: 24px;
    display: none;
}

.hamburger-top,
.hamburger-middle,
.hamburger-bottom {
    position: absolute;
    top: 11px;
    left: 7px;
    width: 24px;
    height: 2px;
    background: white;;
    transform: rotate(0);
    transition: all 0.5s;
 }

.hamburger-middle {
    transform: translateY(7px);
}
  
.hamburger-bottom {
    transform: translateY(14px);
}

/*When opening hamburger menu, change icon*/
.openMobile.hamburger {
    height: 24px;
    width: 24px;
    left: 88%;
}
  
.openMobile .hamburger-top {
    transform: rotate(45deg) translateY(6px) translateX(6px);
}
  
.openMobile .hamburger-middle {
    display: none;
}
  
.openMobile .hamburger-bottom {
    transform: rotate(-45deg) translateY(6px) translateX(-6px);
}



/*====Nav Bar Section Content====*/
#content {
    height: 94.8dvh;
    width: 84%;
    border-radius: 45px;
    background-color: #f5f5f5;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

#overview-content, #projects-content, #forums-content, #personal-content, #current-project-content, #stats-content {
    display: none;
}

.nav-item-content.open {
    display: block !important;
}

/*===Projects Page===*/

.nav-item-content {
    width: calc(100% - 30px);
    height: calc(100% - 30px);
    overflow-y: scroll;

}

#projects-content, #forums-content, #personal-content, #current-project-content, #stats-content {
    background-color: #ffffff;
    border-radius: 30px;
}

#current-project {
    display: none;
}



@media (max-width: 1480px) {
    .menu .nav-item {
        padding-left: 0.8rem;
    }
    .date-item-bottom .date-time {
        flex-direction: column;
    }

}



@media (max-width: 1100px) {
    /*.nav-item a span {
        display: none;
    }

    .nav-item a  {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .nav-item {
        height: 25px;
    }*/
    nav {
        width: 25%;
    }
}



@media (max-width: 768px) {
    .hamburger {
        display: block;
    }

    .date-item-bottom .date-time {
        flex-direction: row;
    }


    body {
        background-color: white;
    }

    nav {
        width: 0%;
        transition: width 0.4s ease;
        background-color: white;
        padding-left: 0;
    }

    .menu .nav-item {
        background-color: #f5f5f5;
    }
    

    .menu {
        display: none;
    }

    #content {
        width: 100%;
        transition: width 0.4s ease;
    }

    .menu.openMobileMenu {
        display: block;
    }

    .expandNav {
        width: 100%;
        margin-left: 3rem;
    }

    .minimiseContent {
        width: 0% !important;
        visibility: hidden;
    }

    #content {
        height: auto;
        width: 100%;
        border-radius: 0;
        padding: 10px;
        margin: 0;
    }

    .nav-item-content {
        width: 100%;
        height: auto;
        margin: 0;
        border-radius: 0;
    }
    
    #overview-content, #projects-content, #forums-content, #stats-content {
        width: 100%;
        border-radius: 0;
    }

    .date-item {
        display: flex;
        justify-content: space-between;
    }

}

